changed Hr color

--- a/Lab0/lab0_c_primer.html
+++ b/Lab0/lab0_c_primer.html
@@ -36,7 +36,7 @@ xmlns="http://www.w3.org/1999/xhtml">
 <body>
 
 <p class="heading1"><strong>Lab 0 - C Primer</strong></p>
-<hr color="red" width="100%" size=2px>
+<hr color="blue" width="100%" size=2px>
 
 <p class="heading2">
 	<strong>Practice with C Programming:</strong> This lab serves to reinforce your 
@@ -46,7 +46,7 @@ xmlns="http://www.w3.org/1999/xhtml">
 </p>
 
 <p class="heading1">Lab Materials</p>
-<hr color="red" width="100%" size=2px>
+<hr color="blue" width="100%" size=2px>
 
 <ul class="body1">
 	<li><a href="CPrimerLab.pdf">Slides</a></li>
@@ -59,7 +59,7 @@ xmlns="http://www.w3.org/1999/xhtml">
 </ol> -->
 
 <p class="heading1">Assignment</p>
-<hr color="red" width="100%" size=2px>
+<hr color="blue" width="100%" size=2px>
 
 <span class="body1"> 
 The sample program compiles but fails the test-cases:
@@ -158,7 +158,7 @@ $ ./runTests
 </pre>
 
 <p class="heading1">Evaluation</p>
-<hr color="red" width="100%" size=2px>
+<hr color="blue" width="100%" size=2px>
 
 <span class="body1"> 
 <ul>
