heading color update

--- a/Lab0/lab0_c_primer.html
+++ b/Lab0/lab0_c_primer.html
@@ -12,7 +12,7 @@ xmlns="http://www.w3.org/1999/xhtml">
 	font-family: 'Oswald', sans-serif;
 	font-size: xx-large;
 	text-align: Center;
-	color: grey;
+	color: rgb(0, 0, 0);
 }
 .heading2 {
 	font-family: 'Roboto', sans-serif;
