--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
           
           <div class="row">
             <div class="col offset-1">
-              <h5>Yuiyung Li</h5>
+              <h5>Yuying Li</h5>
               <ul class="list-group">
                 <li class="list-group-item">
                   <strong>Lab (23422):</strong> Wed, 03:00 - 04:50 p.m
