Added LEcture Schedule PAge

--- a/Lab0/lab0_c_primer.html
+++ b/Lab0/lab0_c_primer.html
@@ -53,10 +53,10 @@ xmlns="http://www.w3.org/1999/xhtml">
 	<li><a href="eecs678_lab0_c_primer.tar.gz">Lab materials</a></li>
 </ul>
 
-<!-- <p class="heading1">Discussion Videos</p>
+<p class="heading1">Discussion Videos</p>
 <ol>
-	<li><a href="https://kansas.sharepoint.com/:v:/t/eecs678/EfuyZ3O7nktGlHApgjH0YnIBaKfViZ6ylCjC-2egWBjiNA?e=aKPHHl">Part-1 (Shell basics and setup)</a></li>
-</ol> -->
+	<li><a href="https://youtu.be/Ls0igXnMEzs">C Primer</a></li>
+</ol>
 
 <p class="heading1">Assignment</p>
 <hr color="blue" width="100%" size=2px>
