--- a/index.html
+++ b/index.html
@@ -210,9 +210,9 @@
         <div class="row">
           <h4>Lecturer: Dr. Prasad Anil Kulkarni
             <br>
-            <!-- EECS 678 (Fall 2024): <a
-              href="https://docs.google.com/document/d/1n-cm3RGCyW6mRrrqiMNAPMRQlXz92txZJnNpxU43Zgs/edit"
-              target="_blank">Schedule</a> -->
+            EECS 678 (Fall 2024): <a
+              href="lecture_schedule.html"
+              target="_blank">Schedule</a>
           </h4>
 
         </div>
