Zarrar Office Hours Updated

--- a/index.html
+++ b/index.html
@@ -234,8 +234,9 @@
                   <ul>
                     <li>Room Number: Eaton 2013</li>
                     <li>TBD</li>
-                    <!-- <li>Mon: 03:00 to 04:00 pm</li>
-                    <li>Wed: 11:00 to 12:50 pm</li> -->
+                    <li>Mon: 09:00 to 10:00 am</li>
+                    <li>Wed: 09:00 to 10:00 am</li>
+                    <li>Fri: 11:00 to 12:00 pm(Based on Appointments)</li>
                   </ul>
                 </li>
               </ul>
