Updated Lec Schedule

--- a/lecture_schedule.html
+++ b/lecture_schedule.html
@@ -90,6 +90,8 @@
             <li><span style="font-size: 14pt;"><a class="inline_disabled"
                         href="https://mediahub.ku.edu/media/t/1_3r3mjb7b" target="_blank" rel="noopener">08/30</a>:
                     Chapter 1: OS Tasks</span></li>
+                    <li><span style="font-size: 14pt;"><a class="inline_disabled" href="https://mediahub.ku.edu/media/t/1_41lur98k" target="_blank" rel="noopener">09/04</a>: Chapter 1: 
+                        OS Tasks, Begin Chapter 2</span></li>
         </ol>
 
 
