--- a/Lab11/lab11_procfs.html
+++ b/Lab11/lab11_procfs.html
@@ -93,12 +93,11 @@ solution. An example output of running dine is shown below:</p>
 		<td bgcolor="#C0C0C0" class="auto-style2"><strong>Evaluation</strong></td>
 	</tr>
 </table>
-
 <p>
 	<ul>
-		<li>Source code - 80%</li>
-		<li> In class Quiz - 10%</li>
-		<li> Demo - 10%</li>
+			<li>Submission -75%</li>
+			<li>In-class Quiz - 10%</li>
+			<li>Demo - 15%</li>
 	</ul>
 </p>
 
