--- a/Lab10/lab10_memio.html
+++ b/Lab10/lab10_memio.html
@@ -73,6 +73,19 @@ using the Makefile submitted in your solution zip file.</p>
 <p style="color: rgb(0, 0, 0); font-family: 'Times New Roman'; font-size: medium; font-style: normal; font-variant: normal; font-weight: normal; letter-spacing: normal; line-height: normal; orphans: auto; text-align: start; text-indent: 0px; text-transform: none; white-space: normal; widows: auto; word-spacing: 0px; -webkit-text-stroke-width: 0px; background-color: rgb(255, 255, 255);">
 Once you are done with the lab, compress your source code and submit the compressed file through Canvas.</p>
 <p>&nbsp;</p>
+
+<table style="width: 100%">
+	<tr>
+		<td bgcolor="#C0C0C0" class="auto-style2"><strong>Evaluation</strong></td>
+	</tr>
+</table>
+<p>
+	<ul>
+			<li>Submission -75%</li>
+			<li>In-class Quiz - 10%</li>
+			<li>Demo - 15%</li>
+	</ul>
+</p>
 <p><a href="../index.html">&lt; Back to the Lab Home Page</a></p>
 
 </body>
