--- a/Lab7/lab7_scheduler1.html
+++ b/Lab7/lab7_scheduler1.html
@@ -140,6 +140,20 @@ Elements in reverse order queue (expected 30 20 10): 30 20 10
 <p style="color: rgb(0, 0, 0); font-family: 'Times New Roman'; font-size: large; font-style: normal; font-variant: normal; font-weight: normal; letter-spacing: normal; line-height: normal; orphans: auto; text-align: start; text-indent: 0px; text-transform: none; white-space: normal; widows: auto; word-spacing: 0px; -webkit-text-stroke-width: 0px; background-color: rgb(255, 255, 255);">
 You should compress your libpriqueue.c and libpriqueue.h for submission. Then, submit the zip file through canvas.
 </p>
+
+<table style="width: 100%">
+	<tr>
+		<td bgcolor="#C0C0C0" class="auto-style2"><strong>Evaluation</strong></td>
+	</tr>
+</table>
+<p>
+	<ul>
+			<li>Submission -75%</li>
+			<li>In-class Quiz - 10%</li>
+			<li>Demo - 15%</li>
+	</ul>
+</p>
+
 <p><a href="../index.html">&lt; Back to the Lab Home Page</a></p>
 
 </body>
