--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
                       <font size="+2"><strong>Project 1 - Quash</strong></font>
                     </a><br><br><b>Deadline -
                       03/10/2024 (Sunday) - 11:59 PM</b><br>Please submit through your lab section's Canvas<br> <br><a
-                      href="https://kansas-my.sharepoint.com/:x:/g/personal/m810z573_home_ku_edu/EXb1c9YQlSZDliaXS4SpUeYB71uD9KQ6x5NDbDTEAZLAQA?e=UPHJCm"
+                      href="https://kansas-my.sharepoint.com/:x:/g/personal/m810z573_home_ku_edu/EX9_BBNTYS1AqGcgOqeTaD4BU4aKSqGbIrCaKmB3CaHYNA?e=BIDiG7"
                       target="_blank">
                       Spreadsheet for Quash project </a><br><br>Please fill out your Quash project team details in above
                     spreadsheet<br><br><b>
