Added yui and jigyas office hours

--- a/index.html
+++ b/index.html
@@ -257,8 +257,8 @@
                   <ul>
                     <li>Room Number: Eaton 2013</li>
                     <li>TBD</li>
-                    <!-- <li>Tue: 09:30 to 10:30 am</li>
-                    <li>Thu: 09:30 to 10:30 am</li> -->
+                    <li>Wed: 12:30 to 01:30 pm</li>
+                    <li>Thu: 02:50 to 03:50 pm</li>
                   </ul>
                 </li>
               </ul>
@@ -280,8 +280,8 @@
                   <ul>
                     <li>Room Number: Eaton 2013</li>
                     <li>TBD</li>
-                    <!-- <li>Mon: 11:00 to 12:00 pm</li>
-                    <li>Thu: 11:30 to 12:00 pm</li> -->
+                    <li>Thu: 10:00 to 11:00 am</li>
+                    <li>Thu: 11:30 to 12:00 pm</li>
                   </ul>
                 </li>
               </ul>
