--- a/index.html
+++ b/index.html
@@ -301,9 +301,8 @@
                 <strong>Office Hours:</strong>
                 <ul>
                   <li>Room Number: Eaton 2013</li>
-                  <li>TBD</li>
-                  <!-- <li>Mon: 11:00 to 12:00 pm</li>
-                  <li>Thu: 11:30 to 12:00 pm</li> -->
+                  <li>Thu: 10:00 to 11:00 am</li>
+                  <li>Fri: 12:00 to 01:00 pm</li>
                 </ul>
               </li>
             </ul>
