--- a/index.html
+++ b/index.html
@@ -138,13 +138,13 @@
           <div class="col">
             <button class="btn btn-primary w-100 text-start" type="button" data-bs-toggle="collapse"
               data-bs-target="#projectCollapse" aria-expanded="true" aria-controls="projectCollapse">
-              <font size="+2">Projects <!--<span class="rainbow-text"><strong>&ltNEW!&gt</strong></span>--> </font>
+              <font size="+2">Projects <span class="rainbow-text"><strong>&ltNEW!&gt</strong></span> </font>
             </button>
             <ol class="collapse show" id="projectCollapse">
-              <font size="+1">
+              <!-- <font size="+1">
                 No Projects released yet
-              </font>
-              <!--<font size="+2">
+              </font> -->
+              <font size="+2">
                 <li>
                   <font size="+1"><a href="projects/quash/doc/html/index.html" target="_blank">
                       <font size="+2"><strong>Project 1 - Quash</strong></font>
@@ -161,7 +161,7 @@
               <br>
 
 
-              <font size="+2">
+              <!--<font size="+2">
               <li>
                 <font size="+1"><a href="projects/buddy/doc/html/index.html" target="_blank">
                     <font size="+2"><strong>Project 2 - Buddy Allocator</strong></font>
