--- a/index.html
+++ b/index.html
@@ -98,10 +98,10 @@
               <font size="+1">
                 <li>Lab 2 - <a href="Lab2/lab2_signal.html">POSIX Signals</a></li>
               </font> <br>
-              <!--<font size="+1">
+              <font size="+1">
                 <li>Lab 3 - <a href="Lab3/lab3_process_ipc.html">Shell, Process and IPC</a></li>
               </font><br>
-              <font size="+1">
+              <!--<font size="+1">
                 <li>Lab 4 - <a href="Lab4/lab4_practice.html">Fork, IPC and Thread Practice</a></li>
               </font><br>
               <font size="+1">
@@ -140,7 +140,7 @@
               data-bs-target="#projectCollapse" aria-expanded="true" aria-controls="projectCollapse">
               <font size="+2">Projects <span class="rainbow-text"><strong>&ltNEW!&gt</strong></span> </font>
             </button>
-            <ol class="collapse show" id="projectCollapse">
+            <ol class="collapse" id="projectCollapse">
               <!-- <font size="+1">
                 No Projects released yet
               </font> -->
