fixed fike path

--- a/Lab3/lab3_process_ipc.html
+++ b/Lab3/lab3_process_ipc.html
@@ -48,7 +48,7 @@ you have written as a tar file.</p>
 <p class="heading1"><strong>Lab Material</strong></p>
 <ol>
 	<li><a href="ProcessIPC.pdf">Slides</a></li>
-	<li><a href="eecs678_lab3.tar">Materials</a></li>
+	<li><a href="./eecs678_lab3.tar.gz">Materials</a></li>
 </ol>
 
 <p class="heading1"><strong>Assignment</strong></p>
