--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
           <div class="col">
             <button class="btn btn-primary w-100 text-start" type="button" data-bs-toggle="collapse"
               data-bs-target="#projectCollapse" aria-expanded="true" aria-controls="projectCollapse">
-              <font size="+2">Projects <span class="rainbow-text"><strong>&ltNEW!&gt</strong></span> </font>
+             <font size="+2">Projects  <!-- <span class="rainbow-text"><strong>&ltNEW!&gt</strong></span>--> </font> 
             </button>
             <ol class="collapse" id="projectCollapse">
               <!-- <font size="+1">
