Fixed reference to slides

--- a/Lab6/lab6_pthreaddp.html
+++ b/Lab6/lab6_pthreaddp.html
@@ -44,7 +44,7 @@ Issues addressed by this lab include:</p>
 	</tr>
 </table>
 <ol>
-	<li><a href="DiningPhilosophers.pdf">Slides</a></li>
+	<li><a href="DiningPhilosophers-1.pdf">Slides</a></li>
 	<li><a href="eecs678-pthreads_dp-lab.tar.gz">Lab Files</a></li>
 	<li>
 		<a href="https://mediahub.ku.edu/media/Lab9_DiningPhilosophers/1_h33fp5oj">Video Discussion</a><br/><br/>
