Extra tag removed

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
               <font size="+1">
                 <li>Lab 5 - <a href="Lab5/lab5_pthreadintro.html">PThreads Introduction</a></li>
               </font><br />
-              <<font size="+1">
+              <font size="+1">
                 <li>Lab 6 - <a href="Lab6/lab6_pthreaddp.html">Dining Philosopher's Problem</a></li>
               </font><br />
               <!--font size="+1">
