--- a/index.html
+++ b/index.html
@@ -111,9 +111,12 @@
                 <li>Lab 6 - <a href="Lab6/lab6_pthreaddp.html">Dining Philosopher's Problem</a></li>
               </font><br />
               <font size="+1">
-                <li>Lab 7 - <a href="Lab7/lab7_scheduler.html">Scheduler</a></li>
+                <li>Lab 7 - <a href="Lab7/lab7_pthreadpc.html">Solving the Producer Consumer Problem with PThreads</a></li>
               </font><br>
               <!--<font size="+1">
+                <li>Lab 8 - <a href="Lab8/lab8_scheduler.html">Scheduler</a></li>
+              </font><br>
+              <font size="+1">
                 <li>Lab 9 - <a href="Lab9/lab9_pagingmm.html">Memory Management using Paging</a></li>
               </font><br>
               <font size="+1">
