--- a/Lab11/lab11_procfs.html
+++ b/Lab11/lab11_procfs.html
@@ -87,6 +87,12 @@ solution. An example output of running dine is shown below:</p>
 
 <p>Before submission, please make sure that your code is running on the cycle servers.</p>
 <p>Once you are done with the lab, please use the "Make zip" target in the Makefile. Please remember to replace the Xs at the top of the Makefile with your KUID. Submissions should be through Canvas.</p><br/>
+<p>
+	<b>
+		This is an optional replacement lab. Submitting it allows you to replace the lab with your lowest score. Participation is not mandatory.
+	</b>
+</p>
+<br>
 
 <table style="width: 100%">
 	<tr>
@@ -95,9 +101,7 @@ solution. An example output of running dine is shown below:</p>
 </table>
 <p>
 	<ul>
-			<li>Submission -75%</li>
-			<li>In-class Quiz - 10%</li>
-			<li>Demo - 15%</li>
+			<li>Submission -100%</li>
 	</ul>
 </p>
 
