update for fall 2025

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
     <center>
       <h1> University of Kansas </h1>
       <h2> EECS678 Introduction to Operating Systems </h2>
-      <h3> FALL 2024 </h3>
+      <h3> FALL 2025 </h3>
     </center>
     <hr>
   </div>
@@ -92,7 +92,7 @@
               <font size="+1">
                 <li>Lab 0 - <a href="Lab0/lab0_c_primer.html">C Primer</a></li>
               </font> <br>
-              <font size="+1">
+              <!-- <font size="+1">
                 <li>Lab 1 - <a href="Lab1/lab1_gdb.html">Debugger (gdb)</a></li>
               </font> <br>
               <font size="+1">
@@ -124,7 +124,7 @@
               </font><br>
               <font size="+1">
                 <li>Lab 11 - <a href="Lab11/lab11_procfs.html">Proc FileSystem</a></li>
-              </font><br>
+              </font><br> -->
               <!--<font size="+1">
                 <li>Lab 12 - <a href="Lab12/Lab12_system_calls.html">System Calls-(Optional Lab)</a></li>
               </font><br> -->
@@ -145,36 +145,20 @@
                 No Projects released yet
               </font> -->
               <font size="+2">
-                <li>
                   <font size="+1"><a href="projects/quash/doc/html/index.html" target="_blank">
-                      <font size="+2"><strong>Project 1 - Quash</strong></font>
-                    </a><br><br><b>Deadline -
+                    <font size="+2"><strong>Quash</strong></font>
+                    </a><br><br>
+                    <!-- <b>Deadline -
                       25/10/2024 (Friday) - 11:59 PM</b><br>Please submit through your lab section's Canvas<br> <br><a
                       href="https://kansas-my.sharepoint.com/:x:/g/personal/m810z573_home_ku_edu/EX9_BBNTYS1AqGcgOqeTaD4BU4aKSqGbIrCaKmB3CaHYNA?e=BIDiG7"
                       target="_blank">
                       Spreadsheet for Quash project </a><br><br>Please fill out your Quash project team details in above
                     spreadsheet<br><br><b>
                       <font color="red">Please make sure NOT to upload your code in any public repository</font>
-                    </b></font>
-                </li>
+                    </b> -->
+                    </font>
               </font>
               <br>
-
-
-              <!--<font size="+2">
-              <li>
-                <font size="+1"><a href="projects/buddy/doc/html/index.html" target="_blank">
-                    <font size="+2"><strong>Project 2 - Buddy Allocator</strong></font>
-                    </a><br><br><b>Deadline - 04/19/2024 (Friday) - 11:59 PM</b><br>Please submit through your lab section's Canvas<br><br>
-                    <a href="https://kansas-my.sharepoint.com/:x:/g/personal/m810z573_home_ku_edu/ETVFur0iSClDvnvTxzL82rwBODwuSDNsrf03mcaySsd6mg?e=jxEqUD"
-                                             target="_blank">
-                    Spreadsheet for Buddy project </a><br><br>Please fill out your Buddy allocator project team details
-                  in
-                  above spreadsheet<br><br><b>
-                    <font color="red">Please make sure NOT to upload your code in any public repository</font>
-                  </b></font>
-              </li><br>
-            </ol>-->
           </div>
           </font>
 
@@ -207,7 +191,7 @@
 
 
       <div class="col-md-5 offset-md-1">
-        <div class="row">
+        <!-- <div class="row">
           <h4>Lecturer: Dr. Prasad Anil Kulkarni
             <br>
             EECS 678 (Fall 2024): <a
@@ -215,28 +199,28 @@
               target="_blank">Schedule</a>
           </h4>
 
-        </div>
+        </div> -->
 
         <div class="row">
           <h4>Teaching Assistants:</h4>
           <div class="row">
             <div class="col offset-1">
-              <h5>Mohammed Misbah Zarrar</h5>
+              <h5>Jonathan Rogers</h5>
               <ul class="list-group">
                 <li class="list-group-item">
-                  <strong>Lab (23429):</strong> Mon, 03:00 - 04:50 p.m
+                  <strong>Lab (21956):</strong> Mon, 12:00 - 01:50 p.m.
                 </li>
                 <li class="list-group-item">
-                  <strong>Lab (15890):</strong> Tue, 04:00 - 5:50 p.m.
+                  <strong>Lab (21776):</strong> Wed, 03:00 - 04:50 p.m.
                 </li>
                 <li class="list-group-item">
-                  <strong>Office Hours:</strong>
+                  <strong>Office Hours: TBA</strong>
                   <ul>
-                    <li>Room Number: Eaton 2013</li>
+                    <!-- <li>Room Number: TBA</li>
                     <li>Mon: 09:00 to 10:00 am</li>
                     <li>Wed: 09:00 to 10:00 am</li>
-                    <li>Fri: 11:00 to 12:00 pm(Based on Appointments)</li>
-                  </ul>
+                    <li>Fri: 11:00 to 12:00 pm</li>
+                  </ul> -->
                 </li>
               </ul>
             </div>
@@ -247,17 +231,17 @@
               <h5>Yuying Li</h5>
               <ul class="list-group">
                 <li class="list-group-item">
-                  <strong>Lab (23422):</strong> Wed, 03:00 - 04:50 p.m
+                  <strong>Lab (21780):</strong> Mon, 03:00 - 04:50 p.m.
                 </li>
                 <li class="list-group-item">
-                  <strong>Lab (23706):</strong> Thu, 04:00 - 5:50 p.m.
+                  <strong>Lab (15515):</strong> Tu, 04:00 - 05:50 p.m.
                 </li>
                 <li class="list-group-item">
-                  <strong>Office Hours:</strong>
+                  <strong>Office Hours: TBA</strong>
                   <ul>
-                    <li>Room Number: Eaton 2013</li>
-                    <li>Wed: 12:30 to 01:30 pm</li>
-                    <li>Thu: 02:50 to 03:50 pm</li>
+                    <!-- <li>Room Number: Eaton 2013</li> -->
+                    <!-- <li>Wed: 12:30 to 01:30 pm</li>
+                    <li>Thu: 02:50 to 03:50 pm</li> -->
                   </ul>
                 </li>
               </ul>
@@ -269,17 +253,17 @@
               <h5>Jigyas Sharma</h5>
               <ul class="list-group">
                 <li class="list-group-item">
-                  <strong>Lab (23707):</strong> Mon, 12:00 - 01:50 p.m
+                  <strong>Lab (21800):</strong> Mon, 12:00 - 01:50 p.m.
                 </li>
                 <li class="list-group-item">
-                  <strong>Lab (20984):</strong> Thu, 2:00 - 3:50 p.m.
+                  <strong>Lab (15516):</strong> Fri, 09:00 - 10:50 a.m.
                 </li>
                 <li class="list-group-item">
-                  <strong>Office Hours:</strong>
+                  <strong>Office Hours: TBA</strong>
                   <ul>
-                    <li>Room Number: Eaton 2013</li>
+                    <!-- <li>Room Number: Eaton 2013</li>
                     <li>Thu: 10:00 to 11:00 am</li>
-                    <li>Thu: 11:30 to 12:00 pm</li>
+                    <li>Thu: 11:30 to 12:00 pm</li> -->
                   </ul>
                 </li>
               </ul>
@@ -289,20 +273,20 @@
 
         <div class="row">
           <div class="col offset-1">
-            <h5>Satya Ashok Dowluri</h5>
+            <h5>Annabelle Marie Stokes</h5>
             <ul class="list-group">
               <li class="list-group-item">
-                <strong>Lab (23456):</strong> Mon, 12:00 - 01:50 p.m
+                <strong>Lab (20028):</strong> Thu, 02:00 - 03:50 p.m
               </li>
               <li class="list-group-item">
-                <strong>Lab (15891):</strong> Fri, 9:00 - 10:50 a.m.
+                <strong>Lab (21955):</strong> Thu, 04:00 - 05:50 p.m.
               </li>
               <li class="list-group-item">
-                <strong>Office Hours:</strong>
+                <strong>Office Hours: TBA</strong>
                 <ul>
-                  <li>Room Number: Eaton 2013</li>
+                  <!-- <li>Room Number: Eaton 2013</li>
                   <li>Thu: 10:00 to 11:00 am</li>
-                  <li>Fri: 12:00 to 01:00 pm</li>
+                  <li>Fri: 12:00 to 01:00 pm</li> -->
                 </ul>
               </li>
             </ul>
