--- a/index.html
+++ b/index.html
@@ -214,13 +214,11 @@
                   <strong>Lab (21776):</strong> Wed, 03:00 - 04:50 p.m.
                 </li>
                 <li class="list-group-item">
-                  <strong>Office Hours: TBA</strong>
+                  <strong>Office Hours: </strong>
                   <ul>
-                    <!-- <li>Room Number: TBA</li>
-                    <li>Mon: 09:00 to 10:00 am</li>
-                    <li>Wed: 09:00 to 10:00 am</li>
-                    <li>Fri: 11:00 to 12:00 pm</li>
-                  </ul> -->
+                    <li>Room Number: Eaton 3029</li>
+                    <li>Fri: 02:00 to 04:00 pm</li>
+                  </ul>
                 </li>
               </ul>
             </div>
@@ -237,11 +235,11 @@
                   <strong>Lab (15515):</strong> Tu, 04:00 - 05:50 p.m.
                 </li>
                 <li class="list-group-item">
-                  <strong>Office Hours: TBA</strong>
+                  <strong>Office Hours: </strong>
                   <ul>
-                    <!-- <li>Room Number: Eaton 2013</li> -->
-                    <!-- <li>Wed: 12:30 to 01:30 pm</li>
-                    <li>Thu: 02:50 to 03:50 pm</li> -->
+                    <li>Room Number: Eaton 3029</li>
+                    <li>Monday: 01:50 to 02:50 pm</li>
+                    <li>Tu: 02:50 to 03:50 pm</li> 
                   </ul>
                 </li>
               </ul>
@@ -259,11 +257,10 @@
                   <strong>Lab (15516):</strong> Fri, 09:00 - 10:50 a.m.
                 </li>
                 <li class="list-group-item">
-                  <strong>Office Hours: TBA</strong>
+                  <strong>Office Hours: </strong>
                   <ul>
-                    <!-- <li>Room Number: Eaton 2013</li>
-                    <li>Thu: 10:00 to 11:00 am</li>
-                    <li>Thu: 11:30 to 12:00 pm</li> -->
+                    <li>Room Number: Eaton 3029</li>
+                    <li>Wed: 10:00 to 12:00 pm</li>
                   </ul>
                 </li>
               </ul>
@@ -284,7 +281,7 @@
               <li class="list-group-item">
                 <strong>Office Hours: TBA</strong>
                 <ul>
-                  <!-- <li>Room Number: Eaton 2013</li>
+                  <!-- <li>Room Number: Eaton 3029</li>
                   <li>Thu: 10:00 to 11:00 am</li>
                   <li>Fri: 12:00 to 01:00 pm</li> -->
                 </ul>
