--- a/Lab1/lab1_gdb.html
+++ b/Lab1/lab1_gdb.html
@@ -131,7 +131,7 @@ $ cat valgrind_output.txt
 <ul>
 	<li>20% (bugs.c) - Correct output from Valgrind</li>
 	<li>35% (bugs.c) - Correct output from GDB </li>
-	<li>20% (valgrind_test.c) - Report explaining your observation of and ways to solve each of the memory leakage issues in valgrind_test.c</li>
+	<li>20% (valgrind_test.c) - Solve each of the memory leakage issues in valgrind_test.c</li>
 	<li>10% (Quiz) - A short quiz on GDB and Valgrind will be open on following week during the lab hours  </li>
 	<li>15% (Demo) - A quick demo of your submission will be taken on the following week during the lab hours </li>
 </ul>
