--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
                   <strong>Office Hours: </strong>
                   <ul>
                     <li>Room Number: Eaton 3029</li>
-                    <li>Wed: 10:00 to 12:00 pm</li>
+                    <li>Wed: 10:00 am to 12:00 pm</li>
                   </ul>
                 </li>
               </ul>
