--- a/Lab1/lab1_gdb.html
+++ b/Lab1/lab1_gdb.html
@@ -141,7 +141,7 @@ $ cat valgrind_output.txt
 	<li>The successful Valgrind output is achieved when the number of allocations matches the number of deallocations(allocs = frees
 ), indicating that all memory leaks have been fixed. </li>
 </ul>
-Please compress your source code along with your written report and submit it through Canvas.
+Please compress your source code and submit it through Canvas.
 <br/>
 <br/>
 <br/>
