Added notice regarding 0 demo grades

--- a/index.html
+++ b/index.html
@@ -168,6 +168,10 @@
               <font size="+2">Notice</font>
               <ul>
                 <font size="+1">
+                  <li><a>Demos exist as a way to verify that the submitted assignments are your own Intellectual Property. Therefore, if you receive a 0 on your demo, your code section is also graded as 0 regardless of the submission.</a>
+                  </li>
+                </font>
+                <font size="+1">
                   <li><a href="./Setting_up_Workspace_for_EECS_678_Labs.pdf" target="_blank">Setting up Workspace</a>
                   </li>
                 </font>
