--- a/index.html
+++ b/index.html
@@ -104,10 +104,10 @@
               <font size="+1">
                 <li>Lab 4 - <a href="Lab4/lab4_practice.html">Fork, IPC and Thread Practice</a></li>
               </font><br>
-              <!--<font size="+1">
+              <font size="+1">
                 <li>Lab 5 - <a href="Lab5/lab5_pthreadintro.html">PThreads Introduction</a></li>
               </font><br />
-              <font size="+1">
+              <!--<font size="+1">
                 <li>Lab 6 - <a href="Lab6/lab6_pthreaddp.html">Dining Philosopher's Problem</a></li>
               </font><br />
               <font size="+1">
@@ -138,9 +138,9 @@
           <div class="col">
             <button class="btn btn-primary w-100 text-start" type="button" data-bs-toggle="collapse"
               data-bs-target="#projectCollapse" aria-expanded="true" aria-controls="projectCollapse">
-             <font size="+2">Projects  <!-- <span class="rainbow-text"><strong>&ltNEW!&gt</strong></span>--> </font> 
+             <font size="+2">Projects (Due October 24th, 11:59 PM)  <!-- <span class="rainbow-text"><strong>&ltNEW!&gt</strong></span>--> </font> 
             </button>
-            <ol class="collapse" id="projectCollapse">
+            <!-- <ol class="collapse" id="projectCollapse"> -->
               <!-- <font size="+1">
                 No Projects released yet
               </font> -->
