--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
           <div class="col">
             <button class="btn btn-primary w-100 text-start" type="button" data-bs-toggle="collapse"
               data-bs-target="#projectCollapse" aria-expanded="true" aria-controls="projectCollapse">
-             <font size="+2">Projects (Due October 24th, 11:59 PM)  <!-- <span class="rainbow-text"><strong>&ltNEW!&gt</strong></span>--> </font> 
+             <font size="+2">Projects<!-- <span class="rainbow-text"><strong>&ltNEW!&gt</strong></span>--> </font> 
             </button>
             <!-- <ol class="collapse" id="projectCollapse"> -->
               <!-- <font size="+1">
@@ -148,14 +148,14 @@
                   <font size="+1"><a href="projects/quash/doc/html/index.html" target="_blank">
                     <font size="+2"><strong>Quash</strong></font>
                     </a><br><br>
-                    <!-- <b>Deadline -
-                      25/10/2024 (Friday) - 11:59 PM</b><br>Please submit through your lab section's Canvas<br> <br><a
-                      href="https://kansas-my.sharepoint.com/:x:/g/personal/m810z573_home_ku_edu/EX9_BBNTYS1AqGcgOqeTaD4BU4aKSqGbIrCaKmB3CaHYNA?e=BIDiG7"
+                    <b>Deadline -
+                      24/10/2025 (Friday) - 11:59 PM</b><br>Please submit through your lab section's Canvas<br> <br><a
+                      href="https://docs.google.com/spreadsheets/d/1xE5aua8kiEz41-Z7PM35nBNV41cSGIKSziC5r7EHaEw/edit?gid=0#gid=0"
                       target="_blank">
                       Spreadsheet for Quash project </a><br><br>Please fill out your Quash project team details in above
                     spreadsheet<br><br><b>
                       <font color="red">Please make sure NOT to upload your code in any public repository</font>
-                    </b> -->
+                    </b>
                     </font>
               </font>
               <br>
