--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@
                   <strong>Office Hours: </strong>
                   <ul>
                     <li>Room Number: Eaton 3029</li>
-                    <li>Wed: 10:00 am to 12:00 pm</li>
+                    <li>Wed: 10:00 a.m to 12:00 p.m</li>
                   </ul>
                 </li>
               </ul>
@@ -284,11 +284,10 @@
                 <strong>Lab (21955):</strong> Thu, 04:00 - 05:50 p.m.
               </li>
               <li class="list-group-item">
-                <strong>Office Hours: TBA</strong>
+                <strong>Office Hours: </strong>
                 <ul>
-                  <!-- <li>Room Number: Eaton 3029</li>
-                  <li>Thu: 10:00 to 11:00 am</li>
-                  <li>Fri: 12:00 to 01:00 pm</li> -->
+                  <li>Room Number: Eaton 3029</li> 
+                  <li>Wed: 11:00 a.m to 1:00 p.m</li>
                 </ul>
               </li>
             </ul>
