--- a/Lab12/Lab12_system_calls.html
+++ b/Lab12/Lab12_system_calls.html
@@ -768,6 +768,22 @@ mode directly. The following slides help you to understand how to debug the
 kernel.</p>
 <p><a href="debuggingkernel/DebuggingLinuxKernel.pdf">Debugging the Linux
 Kernel</a></p>
+
+<table style="width: 100%">
+    <tr>
+        <td bgcolor="#C0C0C0" class="auto-style2">
+            <strong><a name="Submission"></a>Submission Requirements</strong>
+        </td>
+    </tr>
+</table>
+
+<p>
+Each student must submit a <b>single report</b> documenting their work for this lab.
+The report must include a brief description of your process and <b>all required screenshots</b>
+indicated throughout this document.  
+Your grade for this lab is based entirely on this report and is worth <b>100 points</b>.
+</p>
+
 <p>&nbsp;</p>
 <p><a href="/../index.html">&lt; Back to the Lab Home Page</a></p>
 
