--- a/index.html
+++ b/index.html
@@ -127,9 +127,9 @@
               <font size="+1">
                 <li>Lab 11 - <a href="Lab11/lab11_procfs.html">Proc FileSystem</a></li>
               </font><br> -->
-              <!--<font size="+1">
-                <li>Lab 12 - <a href="Lab12/Lab12_system_calls.html">System Calls-(Optional Lab)</a></li>
-              </font><br> -->
+              <font size="+1">
+                <li>Lab 11 - <a href="Lab12/Lab12_system_calls.html">System Calls-(Extra Credits Lab)</a></li>
+              </font><br> 
             </ol>
           </div>
         </div>
